--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -25,6 +26,7 @@
             <!-- <div class="username" href=""  title="Username">HELLO USERNAME</div> -->
             <div class="dropdown">
                 <a class="username" href=""  title="Username">HELLO, USERNAME</a>
+                <i class="fa fa-caret-down"></i>
                 <div class="drop-content">
                     <a href="#"><center>PREFERENCES</center></a>
                     <a href="#"><center>PERMISSIONS</center></a>
